--- a/demo/simple.html
+++ b/demo/simple.html
@@ -4,15 +4,33 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
   <title>api-headers-editor demo</title>
-  <script src="../../webcomponentsjs/webcomponents-loader.js"></script>
-  <link rel="import" href="../../shadycss/apply-shim.html">
-  <link rel="import" href="../../polymer/lib/elements/custom-style.html">
-  <link rel="import" href="../../polymer/lib/elements/dom-bind.html">
-  <link rel="import" href="../../iron-demo-helpers/demo-pages-shared-styles.html">
-  <link rel="import" href="../../neon-animation/web-animations.html">
-  <link rel="import" href="../../paper-toggle-button/paper-toggle-button.html">
-  <link rel="import" href="../../arc-electron-default-theme/arc-electron-default-theme.html">
-  <link rel="import" href="../api-headers-editor.html">
+
+  <script src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
+  <script src="../../../web-animations-js/web-animations-next.min.js"></script>
+
+  <script type="module">
+    import '@polymer/iron-demo-helpers/demo-pages-shared-styles.js';
+    import '@polymer/iron-demo-helpers/demo-snippet.js';
+    import '@polymer/polymer/lib/elements/dom-bind.js';
+    import '@polymer/paper-styles/paper-styles.js';
+    import '@polymer/paper-toggle-button/paper-toggle-button.js';
+    import '@advanced-rest-client/arc-electron-default-theme/arc-electron-default-theme.js';
+    import '../api-headers-editor.js';
+  </script>
+  <!--
+  With HTML imports this was relatively easy task to perform inside web component.
+  With module imports it's all get very messy with legacy scripts (using webpack or whatever).
+  This scripts cannot be loaded inside the the module as it wont be added to the window object.
+  CodeMirror uses `this` instead of `window` or `self` and do not exports any instance.
+  Therefore the CM scripts has to be loaded outside the componet.
+  -->
+  <script src="../../../codemirror/lib/codemirror.js"></script>
+  <script src="../../../codemirror/addon/mode/loadmode.js"></script>
+  <script src="../../../codemirror/mode/meta.js"></script>
+  <script src="../../../@advanced-rest-client/code-mirror-hint/headers-addon.js"></script>
+  <script src="../../../@advanced-rest-client/code-mirror-hint/show-hint.js"></script>
+  <script src="../../../@advanced-rest-client/code-mirror-hint/hint-http-headers.js"></script>
+
   <custom-style>
     <style is="custom-style" include="demo-pages-shared-styles">
     body,
@@ -62,15 +80,7 @@
       <header><h1>api-headers-editor demo</h1></header>
 
       <section role="main" class="vertical-section-container centered card">
-        <api-headers-editor
-          value="{{value}}"
-          narrow="[[narrow]]"
-          allow-custom="[[allowCustom]]"
-          allow-disable-params="[[allowDisableParams]]"
-          allow-hide-optional="[[allowHideOptional]]"
-          readonly="[[readonly]]"
-          no-docs="[[noDocs]]"
-          on-request-headers-changed="_headersChanged"></api-headers-editor>
+        <api-headers-editor value="{{value}}" narrow="[[narrow]]" allow-custom="[[allowCustom]]" allow-disable-params="[[allowDisableParams]]" allow-hide-optional="[[allowHideOptional]]" readonly="[[readonly]]" no-docs="[[noDocs]]" on-request-headers-changed="_headersChanged"></api-headers-editor>
       </section>
 
       <section class="vertical-section-container centered card">
@@ -90,7 +100,7 @@
       </section>
     </template>
   </dom-bind>
-  <script>
+  <script type="module">
   (function(scope) {
     scope.changeCount = 0;
     scope.allowCustom = true;
