--- a/test/api-headers-editor_test.html
+++ b/test/api-headers-editor_test.html
@@ -4,11 +4,22 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
   <title>api-headers-editor test</title>
-  <script src="../../webcomponentsjs/webcomponents-loader.js"></script>
-  <script src="../../web-component-tester/browser.js"></script>
-  <link rel="import" href="../../arc-polyfills/arc-polyfills.html">
-  <link rel="import" href="../api-headers-editor.html">
-  <script src="amf-loader.js"></script>
+
+  <script src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
+  <script src="../node_modules/@polymer/test-fixture/test-fixture.js"></script>
+  <script src="../node_modules/mocha/mocha.js"></script>
+  <script src="../node_modules/chai/chai.js"></script>
+  <script src="../node_modules/wct-mocha/wct-mocha.js"></script>
+  <script src="../node_modules/sinon/pkg/sinon.js"></script>
+
+  <script src="../../../codemirror/lib/codemirror.js"></script>
+  <script src="../../../codemirror/addon/mode/loadmode.js"></script>
+  <script src="../../../codemirror/mode/meta.js"></script>
+  <script src="../../../@advanced-rest-client/code-mirror-hint/headers-addon.js"></script>
+  <script src="../../../@advanced-rest-client/code-mirror-hint/show-hint.js"></script>
+  <script src="../../../@advanced-rest-client/code-mirror-hint/hint-http-headers.js"></script>
+
+  <script src="./amf-loader.js"></script>
 </head>
 
 <body>
@@ -30,7 +41,8 @@
     </template>
   </test-fixture>
 
-  <script>
+  <script type="module">
+  import '../api-headers-editor.js';
   suite('api-headers-editor', () => {
     let element;
     suite('Basics', () => {
@@ -600,7 +612,7 @@
       const element = fixture('SourceMode');
       flush(() => {
         const panel = element.currentPanel;
-        const spy = sinon.spy(panel.editor, 'refresh');
+        const spy = sinon.spy(panel, 'refresh');
         element.refresh();
         assert.isTrue(spy.called);
         done();
